# vox-lang

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
.cargo-husky/hooks/: commit-msg  pre-commit
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  evaluator.rs  lib.rs  loops.rs  printer.rs  scopes.rs  support.rs  validator.rs  visitor.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compilation_unit.rs  lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: diagnostics.rs  lib.rs  printer.rs
crates/frontend/ast/: Cargo.toml
crates/frontend/ast/src/: ast.rs  lib.rs  loops.rs  printer.rs  scopes.rs
crates/frontend/diagnostics/: Cargo.toml
crates/frontend/diagnostics/src/: diagnostics.rs  lib.rs  printer.rs
crates/frontend/lexer/: Cargo.toml
crates/frontend/lexer/src/: lexer.rs
crates/frontend/parser/: Cargo.toml
crates/frontend/parser/src/: parser.rs
crates/frontend/parser/tests/: parser_smoke.rs
crates/frontend/resolver/: Cargo.toml
crates/frontend/resolver/src/: lib.rs  types.rs
crates/frontend/token/: Cargo.toml
crates/frontend/token/src/: token.rs
crates/frontend/typings/: Cargo.toml
crates/frontend/typings/src/: types.rs
crates/index/src/: index.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: errors.rs  lexer.rs  lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  parser.rs
crates/support/: Cargo.toml
crates/support/src/: counter.rs  lib.rs  resolver.rs
crates/text/src/: lib.rs  source.rs  span.rs
crates/typings/: Cargo.toml
crates/typings/src/: types.rs
crates/utils/counter/src/: counter.rs
crates/utils/errors/: Cargo.toml
crates/utils/errors/src/: errors.rs  lib.rs
crates/utils/index/src/: index.rs
crates/utils/text/src/: lib.rs  source.rs
src/: main.rs
tests/: ast_tests.rs  diagnostics_tests.rs  lexer_integration_test.rs  lexer_tests.rs
