[workspace]
resolver = "2"
members = [
    "crates/ast",
    "crates/compiler",
    "crates/diagnostics",
    "crates/lexer",
    "crates/parser",
    "crates/text",
    ".",
]

[package]
name = "vox-lang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vox-lang"
path = "src/main.rs"

[dependencies]
ast = { path = "crates/ast" }
compiler = { path = "crates/compiler" }
diagnostics = { path = "crates/diagnostics" }
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
text = { path = "crates/text" }
miette = { version = "7.2.0", features = ["fancy"] }
bytes = "1.3.0"
clap = { version = "4.5.16", features = ["derive"] }
thiserror = "1.0.66"
termion = "4.0.3"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false }
