[workspace]
resolver = "2"
members = [
    "crates/utils/counter",
    "crates/utils/errors",
    "crates/utils/index",
    "crates/utils/text",
    "crates/frontend/ast",
    "crates/frontend/diagnostics",
    "crates/frontend/lexer",
    "crates/frontend/parser",
    "crates/frontend/resolver",
    "crates/frontend/token",
    "crates/frontend/typings",
    ".",
]

[package]
name = "vox-lang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vox-lang"
path = "src/main.rs"

[dependencies]
counter = { path = "crates/utils/counter" }
errors = { path = "crates/utils/errors" }
text = { path = "crates/utils/text" }
index = { path = "crates/utils/index" }
ast = { path = "crates/frontend/ast" }
diagnostics = { path = "crates/frontend/diagnostics" }
lexer = { path = "crates/frontend/lexer" }
parser = { path = "crates/frontend/parser" }
resolver = { path = "crates/frontend/resolver" }
token = { path = "crates/frontend/token" }
typings = { path = "crates/frontend/typings" }
miette = { version = "7.2.0", features = ["fancy"] }
bytes = "1.3.0"
clap = { version = "4.5.16", features = ["derive"] }
thiserror = "2.0.0"
termion = "4.0.3"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false }
